--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,7 @@ highlight numbers in monaco *
 start trials on a basic compiler
 fix the issue with resizing
 make the tabs pane scrollable
+
+fix load not loading on initial open
+
+code to read linear code
