--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,4 @@ make the tabs pane scrollable
 fix load not loading on initial open
 
 code to read linear code
+fix assigment when there is no space to separare them eg. a=10
