--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,11 @@ make files selectable *
 add functions delete file *
 add function to add new file * 
 highlight numbers in monaco *
-start trials on a basic compiler
+start trials on a basic compiler*
 fix the issue with resizing
 make the tabs pane scrollable
-
 fix load not loading on initial open
-
 code to read linear code
-fix assigment when there is no space to separare them eg. a=10
-
+fix assigment when there is no space to separare them eg. a=10 *
 take run_program from the reducer and execute it outside *
+work on operators
