--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,4 @@ code to read linear code
 fix assigment when there is no space to separare them eg. a=10 *
 take run_program from the reducer and execute it outside *
 work on operators
+work on assigning variables to variables
