fifth and fourth precedence

--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,4 @@ fix assigment when there is no space to separare them eg. a=10 *
 take run_program from the reducer and execute it outside *
 work on operators
 work on assigning variables to variables*
+compare true and false
