--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,4 @@ compare true and false*
 fix the open folder in menu bar
 fix string coming with =
 add >< which is similar to !=
+remove recursive code execution
